--- a/WebUI/Views/Login/SignUp.cshtml
+++ b/WebUI/Views/Login/SignUp.cshtml
@@ -3,36 +3,6 @@
     Layout = null;
 }
 
-@* 
-<h1>SignUp</h1>
-<form asp-controller="Login" asp-action="SignUp" method="post">
-    <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="Email" name="Email" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-        <label for="exampleInputEmail1">Kullanıcı Adı</label>
-        <input type="text" class="form-control" id="UserName" name="UserName" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-        <label for="exampleInputEmail1">Ad</label>
-        <input type="text" class="form-control" id="FirstName" name="FirstName" aria-describedby="emailHelp" placeholder="Enter ">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-        <label for="exampleInputEmail1">Soyadı</label>
-        <input type="text" class="form-control" id="LastName" name="LastName" aria-describedby="emailHelp" placeholder="Enter ">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1">Şifre</label>
-        <input type="text" class="form-control" id="Password" name="Password" placeholder="Password">
-    </div>
-
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>  *@
 
 
 <!DOCTYPE html>
@@ -79,10 +49,10 @@
                 <input type="text" class="form-control" asp-for="Password" id="Password" name="Password" placeholder="Şifre">
                 <span asp-validation-for="Password" class="text-danger"></span>
                 <div class="text">
-                    <h3>Zaten bir hesabım var <a href="/Login/Login">Giriş Yap</a></h3>
+                    <h3>Zaten bir hesabım var <a href="/Login/Login"> Giriş Yap</a></h3>
                 </div>
 
-                <input type="button" onclick="signup()" value="Giriş Yap" />
+                <input type="button" onclick="signup()" value="Kayıt Ol" />
 
               
             </form>
